WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281230
[iPadOS 18] Unable to include header row when copy and pasting table from confluence to Notes
https://bugs.webkit.org/show_bug.cgi?id=281230
Summary
[iPadOS 18] Unable to include header row when copy and pasting table from con...
Wenson Hsieh
Reported
2024-10-10 09:24:36 PDT
rdar://137088450
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-10-10 10:46:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34984
EWS
Comment 2
2024-10-10 13:50:49 PDT
Committed
284993@main
(1b4675b62ba3): <
https://commits.webkit.org/284993@main
> Reviewed commits have been landed. Closing PR #34984 and removing active labels.
EWS
Comment 3
2024-10-11 11:07:38 PDT
Committed
283286.246@safari-7620-branch
(826a09e9b906): <
https://commits.webkit.org/283286.246@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2009 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug